--- a/sweep.yaml
+++ b/sweep.yaml
@@ -18,7 +18,7 @@ gha_enabled: True
 # Example:
 #
 # description: sweepai/sweep is a python project. The main api endpoints are in sweepai/api.py. Write code that adheres to PEP8.
-description: ''
+description: 'chenbm4/PokeBot-Zero is a python project to implement an AI for Pokemon Showdown using RL methods inspired by AlphaZero/AlphaGo projects. Write code that adheres to PEP8.'
 
 # This sets whether to create pull requests as drafts. If this is set to True, then all pull requests will be created as drafts and GitHub Actions will not be triggered.
 draft: False
