working simple rl bot using DQN

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-poke-env
+git+https://github.com/hsahovic/poke-env/
 gymnasium
 numpy
 orjson
 requests
 tabulate
 websockets>=8.0
+stable-baselines3
